Transform to Wine Hero Section

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Model Texture Transition And Procedural Radial Noise Using WebGL | Codrops</title>
-    <meta name="keywords" content="webgl, radial noise, texture, transition" />
-    <meta name="author" content="Mohammed Amine Bourouis for Codrops" />
+    <title>Vinterra - Discover the World's Finest Wines</title>
+    <meta name="description" content="Premium wine collection from prestigious vineyards worldwide. Experience exceptional wines crafted with passion and tradition." />
+    <meta name="keywords" content="wine, premium wines, vineyard, wine collection, fine wines" />
+    <meta name="author" content="Vinterra Wine Collection" />
     <link rel="shortcut icon" href="/favicon.ico">
     <script>document.documentElement.className="js";</script>
-    <script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
