--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vinterra - Discover the World's Finest Wines</title>
-    <meta name="description" content="Premium wine collection from prestigious vineyards worldwide. Experience exceptional wines crafted with passion and tradition." />
-    <meta name="keywords" content="wine, premium wines, vineyard, wine collection, fine wines" />
-    <meta name="author" content="Vinterra Wine Collection" />
+    <title>Ferra - Unbottle Your Chaos</title>
+    <meta name="description" content="Unbottle your chaos. Pour your poetry. Ferra's got you." />
+    <meta name="keywords" content="wine, young adults, modern wine, craft wine, urban wine" />
+    <meta name="author" content="Ferra Wine" />
     <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>document.documentElement.className="js";</script>
   </head>
   <body>
